@@ -1,6 +1,5 @@
 package com.rahim.pricingservice.service.repository.implementation;
 
-import com.rahim.pricingservice.model.GoldPrice;
 import com.rahim.pricingservice.model.GoldType;
 import com.rahim.pricingservice.repository.GoldTypeRepository;
 import com.rahim.pricingservice.service.repository.IGoldTypeRepositoryHandler;
@@ -16,7 +15,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * @author Rahim Ahmed
@@ -27,20 +25,16 @@ import java.util.stream.Collectors;
 public class GoldTypeRepositoryHandler implements IGoldTypeRepositoryHandler {
 
     private static final Logger LOG = LoggerFactory.getLogger(GoldTypeRepositoryHandler.class);
-
     private final GoldTypeRepository goldTypeRepository;
 
     @Override
     public List<Integer> allGoldTypeIds() {
         try {
-            List<Integer> ids = goldTypeRepository.findAll()
+            return goldTypeRepository
+                    .findAll()
                     .stream()
                     .map(GoldType::getId)
-                    .collect(Collectors.toList());
-
-            LOG.debug("Retrieved all GoldType IDs: {}", ids);
-
-            return ids;
+                    .toList();
         } catch (Exception e) {
             LOG.error("Error getting all GoldType IDs", e);
             throw new RuntimeException("Error getting all GoldType IDs", e);
@@ -51,38 +45,20 @@ public class GoldTypeRepositoryHandler implements IGoldTypeRepositoryHandler {
     public Optional<GoldType> findById(Integer goldTypeId) {
         try {
             Objects.requireNonNull(goldTypeId, "Gold Type ID must not be null");
-
-            Optional<GoldType> typeOptional = goldTypeRepository.findById(goldTypeId);
-
-            if (typeOptional.isPresent()) {
-                LOG.debug("Found Gold Type with ID: {}", goldTypeId);
-            } else {
-                LOG.debug("Gold Type not found for ID: {}", goldTypeId);
-            }
-
-            return typeOptional;
+            return goldTypeRepository.findById(goldTypeId);
         } catch (DataAccessException e) {
-            String errorMessage = "An error occurred while retrieving Gold Type with ID: " + goldTypeId;
-            LOG.error(errorMessage, e);
-            throw new RuntimeException(errorMessage, e);
+            LOG.error("An error occurred while retrieving Gold Type with ID: {}", goldTypeId, e);
         }
+        return Optional.empty();
     }
 
     @Override
     public List<GoldType> getAllGoldTypes() {
-        List<GoldType> goldTypes = goldTypeRepository.findAll();
-
-        if (!goldTypes.isEmpty()) {
-            LOG.info("Found {} gold types in the database", goldTypes.size());
-        } else {
-            LOG.info("No gold types found in the database");
-        }
-
-        return goldTypes;
+        return goldTypeRepository.findAll();
     }
 
     @Override
-    public void saveGoldType(GoldType goldType) {
+    public void addNewGoldType(GoldType goldType) {
         if (!ObjectUtils.allNotNull(goldType, goldType.getName(), goldType.getNetWeight(), goldType.getCarat(), goldType.getDescription())) {
             LOG.error("GoldType object is null or contains null properties. Unable to save.");
             throw new IllegalArgumentException("GoldType object is null or contains null properties. Unable to save.");
@@ -93,6 +69,21 @@ public class GoldTypeRepositoryHandler implements IGoldTypeRepositoryHandler {
         } catch (DataException e) {
             LOG.error("Error saving gold type to the database", e);
             throw new DataIntegrityViolationException("Error saving gold type to the database", e);
+        }
+    }
+
+    @Override
+    public void updateGoldType(GoldType goldType) {
+        if (goldType == null || goldType.getId() == null) {
+            LOG.error("Invalid gold type or gold type ID is null. Unable to save.");
+            throw new IllegalArgumentException("Invalid gold type or gold type ID is null. Unable to save.");
+        }
+
+        try {
+            goldTypeRepository.save(goldType);
+        } catch (DataIntegrityViolationException e) {
+            LOG.error("Error updating profile to the database: {}", e.getMessage());
+            throw new RuntimeException("Error saving profile to database", e);
         }
     }
 
